[build-system]
requires = [
	"flit_core >=3.2,<4"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
[project]
name = "nn"
authors = [{name = "Jessica Flowers", email = "jessica.flowers@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
    "numpy",
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/jessicaflowers/final-nn.git"